--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -25,8 +25,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "synchronous029@gmail.com"
-          git config --local user.name "synchronous29"
+          git config --local user.email "synxhronous@gmail.com"
+          git config --local user.name "synxhronous29"
           git add -A
           
           arr[0]="feat: 😂 auto commit"
